name:                radius
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/erickg/radius#readme
license:             BSD3
license-file:        LICENSE
author:              Erick Gonzalez
maintainer:          erick@codemonkeylabs.de
copyright:           2017 Erick Gonzalez
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.RADIUS
                     , Network.RADIUS.Types
  build-depends:       base >= 4.7 && < 5
                     , binary
                     , bytestring
                     , iproute
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

source-repository head
  type:     git
  location: https://github.com/erickg/radius
